# PHFPFAC

./: .gitignore  CMakeLists.txt  README.md
regex_GPU_PHF/: .nfs000000000d5c29d600000001  1000000byte  GPU_match_result.txt  Makefile  PFAC_table.txt  chineseinput  chinesepattern  creatbiginput.sh  createbigpattern.sh  creatfile.sh  dummy.txt  englishdicsmall.txt  englishtest.txt  experimentinput  experimentpattern  gphf  gphf1.nvp  gphf2.nvp  gphf3.nvp  input1.txt  inputlong  inputshort  main.cc  master_kernel.cu  openMP123.nvp  openMPtest.nvp  openMPtest3.nvp  pattern.txt  simpleStream.nvp  streamtest  streamteststream1.nvp  streamteststream2.nvp  streamteststream3.nvp  streamteststream4.nvp  testthomasinput  testthomaspatterns  xaa  xab  xac  xad  (+1 more)
regex_GPU_PHF/CreateTable/: .create_table_reorder.c.swp  create_PFAC_table_reorder.c  create_table_reorder.c  ctdef.h
regex_GPU_PHF/PHF/: phf.c
regex_GPU_PHF/bytefile/: 100000byte  10000byte  150000byte  200000byte  300000byte  400000byte  500000byte  50000byte  600000byte  700000byte  800000byte  900000byte
regex_GPU_PHF/experiment/: GPU_match_resultall.txt  GPU_match_resultxaa.txt  GPU_match_resultxab.txt  GPU_match_resultxac.txt  GPU_match_resultxad.txt  allposition  englishdicall  xaaposition  xaarecord  xabposition  xabrecord  xacposition  xacrecord  xadposition  xadrecord  xxxposition
regex_GPU_PHF/experiment/bigenglishdic/: xaa  xab  xac
